k8s/k8s-example.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: announce2mattermost
  namespace: example
spec:
  selector:
    app: announce2mattermost
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: announce2mattermost
  namespace: example
  labels:
    app: announce2mattermost
    env: ci1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: announce2mattermost
  template:
    metadata:
      labels:
        app: announce2mattermost
    spec:
      containers:
      - name: announce2mattermost
        image: registry.example.com/example/announce2mattermost:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 300Mi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: announce2mattermost
  namespace: example
spec:
  rules:
  - host: announce2mattermost.example.com
    http:
      paths:
      - backend:
          serviceName: announce2mattermost
          servicePort: 80
  tls:
  - hosts:
    - announce2mattermost.example.com
